<?xml version="1.0"?>
<package format="2">
  <name>map_server</name>
  <version>0.0.0</version>
  <description>The map_server package</description>


  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>roscpp</depend>

  <export>
    

  </export>
</package>
